2002-07-24  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (mono_string_utf8_to_builder): impl.
	(mono_string_builder_to_utf8): impl.
	(mono_marshal_get_native_wrapper): impl. StringBuilder marshaling

2002-07-23  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (mono_marshal_get_native_wrapper): impl. byref types
	(mono_marshal_get_managed_wrapper): impl. byref types

2002-07-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* icall.c:
	(search_method): don't display debug message. 

2002-07-22  Dietmar Maurer  <dietmar@ximian.com>

	* metadata.c (mono_type_stack_size): removed temporary fix for new gcc

Mon Jul 22 18:17:05 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* appdomain.c: set the missing filename when throwing exception.

2002-07-22  Dietmar Maurer  <dietmar@ximian.com>

	* metadata.c (mono_type_size): code cleanup
	(mono_type_stack_size): removed some test code

2002-07-21  Miguel de Icaza  <miguel@ximian.com>

	* appdomain.c (ves_icall_System_Reflection_Assembly_LoadFrom): Use
	mono_get_exception_file_not_found now.

	* exception.c (mono_exception_from_name_two_strings): New version
	that will call a constructor with two string arguments. 
	(mono_get_exception_file_not_found): New helper routine, used to
	report file-not-found errors.

2002-07-20  Dick Porter  <dick@ximian.com>

	* process.h:
	* process.c: Pass file handles to CreateProcess
	
	* icall.c:
	* file-io.h:
	* file-io.c: Implemented CreatePipe

2002-07-19  Dietmar Maurer  <dietmar@ximian.com>

	* metadata.c (mono_get_param_info): set alignment for value types

Fri Jul 19 18:58:27 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* appdomain.h, domain.c, threads-types.h: don't include config.h in headers.
	Constify mono_domain_assembly_open().
	* loader.c: handle null namespace in icalls.

2002-07-19  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (emit_ptr_to_str_conv): marshal object as structs
	(emit_str_to_ptr_conv): marshal object as structs
